<resources>
    <string name="app_name">MedicineNote</string>
    <string name="action_settings">Settings</string>
    <string name="phonetic">ふりがな</string>
    <string name="name">氏名</string>
    <string name="sex">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birthday">生年月日</string>
    <string name="address">住所</string>
    <string name="phone">TEL</string>
    <string name="contact">緊急連絡先</string>
    <string name="phone1">TEL</string>
    <string name="bloodType">血液型</string>
    <string name="bloodA">A</string>
    <string name="bloodB">B</string>
    <string name="bloodAB">AB</string>
    <string name="bloodO">O</string>
    <string name="allergy">アレルギー</string>
    <string name="yes">有</string>
    <string name="no">無</string>
    <string name="history">既往歴</string>
    <string name="yes1">有</string>
    <string name="no1">無</string>
    <string name="asthma">気管支喘息</string>
    <string name="ulcer">消化性潰瘍</string>
    <string name="kidney">腎疾患</string>
    <string name="liver">肝疾患</string>
    <string name="dm">糖尿病</string>
    <string name="heart">心疾患</string>
    <string name="prostate">前立腺肥大</string>
    <string name="glaucoma">緑内障</string>
    <string name="other">その他</string>
    <string name="sideEffect">副作用</string>
    <string name="yes2">有</string>
    <string name="no2">無</string>
    <string name="note">備考</string>
    <string name="save">保存</string>
    <string name="next">次へ</string>
    <string name="date">処方年月日</string>
    <string name="hospital">医療機関名</string>
    <string name="doctor">医師名</string>
    <string name="medicine">処方薬</string>
    <string name="insert">登録</string>
    <string name="update">更新</string>
    <string name="delete">削除</string>
    <string name="show">表示</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
